# opensuse-auth-moderator

./: .gitignore  CODE_OF_CONDUCT.md  Cargo.toml  README.md  example.toml
src/: configuration.rs  main.rs
