[package]
name = "opensuse-auth-moderator"
version = "0.1.0"
edition = "2021"

[dependencies]

anyhow = "1"
askama = "0.12.1"
axum = { version = "0.7", features = [ "http1", "tokio", "macros", "tracing", "multipart" ] }

# axum-server = { version = "0.7.1", features = ["tls-rustls"] }
axum-server = { path = "../axum-server", features = ["tls-rustls"] }

tower-http = { version = "0.5", default-features = false, features = ["compression-gzip", "fs"] }

# tower-sessions = { version = "0.12", features = ["memory-store", "signed"] }

clap = { version = "4.1", features = ["derive", "env"] }

serde = "1.0"
serde_json = "1.0"

time = { version = "0.3.20", features = ["local-offset", "serde-human-readable"] }

tracing = { version = "0.1", features = ["attributes"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-forest = { version = "0.1.6", features = ["smallvec", "tokio", "uuid"] }

toml = "0.8"

tokio = { version = "1", features = ["full"] }

openidconnect = "3.2.0"

# chrono = "0.4"

